--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
+  "homepage": "https://maiphuongthao.github.io/The11studio-basic/",
   "name": "the11studio-basic",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+   
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -30,6 +32,5 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
-  },
-  "homepage": "https://maiphuongthao.github.io/The11studio-basic/"
+  }
 }
