--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-   
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
@@ -14,10 +13,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@heroicons/react": "^2.1.4",
+    "@material-tailwind/react": "^2.1.9",
+    "animate.css": "^4.1.1",
+    "classnames": "^2.5.1",
+    "framer-motion": "^11.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "scroll-lock": "^2.1.5"
+    "scroll-lock": "^2.1.5",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
